scrollbar fix

--- a/style.css
+++ b/style.css
@@ -138,8 +138,12 @@ picture:not([xl\:absolute]) {
 }
 
 /* custom scrollbar */
+body {
+    scrollbar-gutter: stable both-edges;
+}
+
 ::-webkit-scrollbar {
-    width: 0.5rem;
+    min-width: 100%;
 }
 ::-webkit-scrollbar-track {
     background-color: hsl(210, 10%, 33%);
